# hyper-scripter

./: .gitignore  Cargo.toml  README.md  build.rs
.flash_script/: .gitignore
.instant_script/: .gitignore
completion/: hs.bash  hs.fish  hs.zsh
demo/: demo.cast  demo1.cast  demo2.cast  recover.sh  setup.sh
demo/scripts/: .gitignore  .script_info.db  reset.sh
demo/scripts/playbook/: 1.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh  8.sh
docs/: 許願池.md
hyper-scripter/: Cargo.toml  build.rs
hyper-scripter-historian/: Cargo.toml  build.rs
hyper-scripter-historian/migrations/: 202009171618_event.sql  202012250613_last_event.sql  202103272241_ignore_event.sql  202104151346_main_event.sql  202110021144_event_dir.sql  202110021144_event_path.sql  202111171500_humble.sql  202211211900_env_history.sql
hyper-scripter-historian/src/: db.rs  event.rs  lib.rs
hyper-scripter-historian/src/migration/: mod.rs
hyper-scripter-test-lib/: test_util.rs
hyper-scripter-util/: .hs_path.sh  .util.rb  Cargo.toml  build.rs  clean_garbage.sh  common.rb  hidden_list  import.rb
hyper-scripter-util/src/: lib.rs
hyper-scripter-util/tests/: test.rs  test_selector.rb  test_selector.rs
hyper-scripter-util/tests/to_be_import/: .config.toml  .gitignore  .script_info.db
hyper-scripter-util/tests/to_be_import/copy/: test.sh
hyper-scripter-util/tests/to_be_import/my/: test.rb
hyper-scripter-util/tests/to_be_import/your/: 20201012165214-test.sh
hyper-scripter-util/util/: banish.sh  collect.rb  commit.rb  common.rb  env.rb  git.sh  historian.rb  hs_env.sh  import.rb  open-hs.tmux  resource.rb  selector.rb  tmp_config.rb  top.rb
hyper-scripter/.hyper_scripter_redirect/: test.sh
hyper-scripter/.test_hyper_scripter/: .gitignore
hyper-scripter/benches/: bench.rs
hyper-scripter/migrations/: 202009141739_script_info.sql  202009171618_event.sql  202106131448_last_event.sql  202108042200_neglect_time.sql  202110181000_exec_count.sql  202111091400_miss_event.sql  202112201400_humble_time.sql  202305301400_drop_last_time.sql  202311231000_drop_miss_time.sql  202508251000_script_hash.sql
hyper-scripter/src/: args.rs  color.rs  config.rs  db.rs  env_pair.rs  error.rs  extract_help.rs  extract_msg.rs  extract_usage.rs  fuzzy.rs  lib.rs  list.rs  main.rs  main_inner.rs  my_env_logger.rs  path.rs  process_lock.rs  query.rs  script.rs  script_time.rs  script_type.rs  state.rs  tag.rs  util.rs
hyper-scripter/src/args/: completion.rs  help_str.rs  mod.rs  tags.rs  types.rs
hyper-scripter/src/error_display/: mod.rs
hyper-scripter/src/historian/: event.rs  mod.rs
hyper-scripter/src/list/: grid.rs  list.rs  list_impl.rs  mod.rs  time_fmt.rs  tree.rs  tree_lib.rs
hyper-scripter/src/list/table_lib/: mod.rs  word_wrap.rs
hyper-scripter/src/migration/: mod.rs
hyper-scripter/src/query/: list_query_handler.rs  mod.rs  prefetch.rs  range_query.rs  the_multifuzz_algo.rs  util.rs
hyper-scripter/src/script_repo/: helper.rs  mod.rs
hyper-scripter/src/util/: completion_util.rs  holder.rs  hs_prerun  hs_prerun.sh  init_repo.rs  main_util.rs  mod.rs  serde.rs  shebang_handle.rs  writable.rs
hyper-scripter/tests/: advanced.rs  completion.rs  editor.sh  fuzzy.rs  history.rs  integration.rs  issues.rs  test.rs  tool.rs  util_test.rs
hyper-scripter/tests/to_be_import/: .config.toml  .gitignore  .script_info.db  yoo.sh
hyper-scripter/tests/to_be_import/.anonymous/: 1.sh  4.sh
hyper-scripter/tests/to_be_import/.resource/: config.toml  script_info.db
hyper-scripter/tests/to_be_import/.resource/anonymous/: 2.sh  3  5.sh
hyper-scripter/tests/to_be_import/my/: test.rb
hyper-scripter/tests/to_be_import/util/: common.rb
hyper-scripter/tests/to_be_import/your/: 20201012165214-test.sh
migrations/: 202009141739_script_info.sql
src/: arg.rs  config.rs  error.rs  fuzzy.rs  history.rs  lib.rs  list.rs  main.rs  path.rs  query.rs  script.rs  script_query.rs  script_type.rs  tag.rs  templates.rs  util.rs
src/error_display/: mod.rs
src/migration/: mod.rs
src/script_repo/: mod.rs
tests/: test.rs
