[package]
name = "instant_scripter"
version = "0.2.0"
authors = ["why8ther <lturtsamuel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []

[dependencies]
chrono = { version = "0.4.7", features = ["serde"] }
env_logger = "0.6.2"
lazy_static = "1.4"
log = "0.4.8"
regex = "1.3.9"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.3"
fuzzy-matcher = "0.3.5"
prettytable-rs = "^0.8"
colored = "2"
dirs = "3.0.1"
mustache = "0.9.0"