[package]
name = "hyper-scripter-historian"
version = "0.3.2"
authors = ["why8ther <lturtsamuel@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Database tool for hyper-scripter. Not indetended to be used directly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
chrono = { version = "0.4.7", features = ["serde"] }
derive_more = "0.99.0"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "chrono", "migrate", "sqlite" ] }
tokio = { version = "0.2.22", features = ["full"] }

[dependencies.openssl]
version = "0.10.29"
features = [ "vendored" ]

[build-dependencies]
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "chrono", "migrate", "sqlite" ] }
log = "0.4.8"
tokio = { version = "0.2.22", features = ["full"] }