[package]
name = "hyper-scripter-historian"
version = "0.5.24"
authors = ["why8ther <lturtsamuel@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Database tool for hyper-scripter. Not indetended to be used directly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
chrono = { version = "0.4.7", features = ["serde"] }
sqlx = { version = "0.5.10", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "sqlite", "chrono", "migrate", "any" ] }

[dependencies.openssl]
version = "0.10.29"
features = [ "vendored" ]

[build-dependencies]
sqlx = { version = "0.5.10", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "sqlite", "chrono", "migrate", "any" ] }
log = "0.4.8"
tokio = { version = "1", features = ["full"] }
