[package]
name = "hyper-scripter-historian"
version = "0.7.1"
authors = ["why8ther <lturtsamuel@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Database tool for hyper-scripter. Not indetended to be used directly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
chrono = { version = "0.4.7", features = ["serde"] }
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio", "macros", "sqlite", "chrono", "migrate" ] }

[build-dependencies]
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio", "macros", "sqlite", "chrono", "migrate" ] }
log = "0.4.8"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
