[package]
name = "hyper-scripter"
version = "0.5.1"
authors = ["why8ther <lturtsamuel@gmail.com>"]
edition = "2018"
autotests = false
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
description = "The script managing tool for script lovers"
default-run = "hs"

[[bin]]
name = "hs"
path = "src/bin/main.rs"

[[bin]]
name = "gen-completion"
path = "src/bin/gen_completion.rs"

[[test]]
name = "issues"
path = "tests/issues.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "util"
path = "tests/util_test.rs"

[[test]]
name = "history"
path = "tests/history.rs"

[[test]]
name = "fuzzy"
path = "tests/fuzzy.rs"

[features]
default = []
hard-home = []
no-state-check = []
benching = []

[dependencies]
console = "0.13.0"
fxhash = "0.2.1"
futures = "^0.3"
chrono = { version = "0.4.7", features = ["serde"] }
sqlx = { version = "0.4.2", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "sqlite", "chrono", "migrate", "any" ] }
tokio = { version = "0.2.22", features = ["full"] }
env_logger = "0.6.2"
log = "0.4.8"
regex = "1.3.9"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
derive_more = "0.99.0"
structopt = "0.3"
fuzzy-matcher = "0.3.5"
prettytable-rs = "^0.8"
colored = "2"
dirs = "3.0.1"
handlebars = "3.3.0"
toml = "0.5.6"
ctrlc = { version = "3.0", features = ["termination"] }
hyper-scripter-historian = { version = "0.5.1", path = "../hyper-scripter-historian" }
hyper-scripter-util = { version = "0.5.1", path = "../hyper-scripter-util" }

[dependencies.openssl]
version = "0.10.29"
features = [ "vendored" ]

[build-dependencies]
sqlx = { version = "0.4.2", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "sqlite", "chrono", "migrate", "any" ] }
tokio = { version = "0.2.22", features = ["full"] }
log = "0.4.8"

[dev-dependencies]
lazy_static = "1.4"
rand = "0.8.3"
criterion = "0.3"
criterion-macro = "0.3"
