[package]
name = "hyper-scripter"
version = "0.7.5"
authors = ["why8ther <lturtsamuel@gmail.com>"]
edition = "2021"
autotests = false
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
description = "The script managing tool for script lovers"
default-run = "hs"

[[bin]]
name = "hs"
path = "src/bin/main.rs"

[[bin]]
name = "gen-completion"
path = "src/bin/gen_completion.rs"

[[test]]
name = "issues"
path = "tests/issues.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "util"
path = "tests/util_test.rs"

[[test]]
name = "history"
path = "tests/history.rs"

[[test]]
name = "advanced"
path = "tests/advanced.rs"

[[test]]
name = "fuzzy"
path = "tests/fuzzy.rs"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[features]
default = ["log"]
hard-home = []
no-state-check = []
benching = []
log = ["env_logger"]
no-log = ["log/max_level_off"]

[dependencies]
console = "0.13.0"
fxhash = "0.2.1"
shlex = "1.1.0"
futures = "0.3.5"
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio", "macros", "sqlite", "chrono", "migrate" ] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
env_logger = { version = "0.6.2", optional = true }
log = "0.4.8"
regex = "1"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
derive_more = "0.99.0"
clap = { version = "3.1.8", features = ["derive"] }
clap_complete = "3.1.1"
fuzzy-matcher = "0.3.5"
dirs = "3.0.1"
handlebars = "3.3.0"
toml = "0.5.6"
ctrlc = { version = "3.0" }
term_grid = "0.1"
unicode-width = "0.1"
hyper-scripter-historian = { version = "0.7.5", path = "../hyper-scripter-historian" }
hyper-scripter-util = { version = "0.7.5", path = "../hyper-scripter-util" }
fd-lock = "4.0.0"

[build-dependencies]
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio", "macros", "sqlite", "chrono", "migrate" ] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
log = "0.4.8"

[dev-dependencies]
rand = "0.8.3"
criterion = { version = "0.5", features = ["html_reports"] }
